# kotori

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  explore.sh  pyproject.toml  railway.json
db/: schema.sql
docs/: DEPLOY.md
docs/specs/: 2026-05-24-backtest-engine-design.md
kotori_tui/: __main__.py  app.py  db.py
kotori_tui/screens/: earnings_view.py  note_input.py  position_detail.py  strategy_view.py  thesis_editor.py
kotori_tui/views/: briefing_view.py
kotori_tui/widgets/: status_bar.py
kotorid/: __main__.py  alerts_lib.py  candidate_scan.py  clock.py  config.py  db.py  earnings.py  engine.py  handlers.py  heartbeat.py  ic_sync.py  jobs.py  market_calendar.py  mock_data.py  notify.py  order_placement.py  order_status.py  position_monitor.py  position_sync.py  schema.sql  tradier_client.py
kotorid/analytics/: compare.py  stats.py
kotorid/data/: ingest.py  massive_ingest.py  parquet_provider.py  provider.py
kotorid/execution/: cost.py  executor.py  simulated.py
kotorid/portfolio/: portfolio.py  risk.py
kotorid/signals/: mesh.py  regime.py
kotorid/strategy/: allocator.py  config.py  (+1 more)
portfolio_tui/: __main__.py  app.py  db.py
portfoliod/: __main__.py  config.py  iv_engine.py  jobs.py  mock_data.py  position_sync.py  regime_engine.py  tradier_client.py
scripts/: ab_backtest.py  earnings_calendar.py  fetch_historical_earnings.py  ingest_massive.py  place_and_sync.py  place_ic_and_sync.py  place_option_and_sync.py  run_backtest.py  scan_candidates.py  snapshot_modal.py  snapshot_position_detail.py  snapshot_strategy.py  snapshot_tui.py
tests/: conftest.py  test_alerts_lib.py  test_analytics.py  test_briefing_discord_post.py  test_briefing_view_formatting.py  test_candidate_scan.py  test_clock.py  test_db.py  test_dte_check.py  test_earnings.py  test_eod_recap.py  test_handlers.py  test_heartbeat.py  test_ic_strategy.py  test_ic_sync.py  test_ingest.py  test_iv_engine.py  test_jobs_position_monitor.py  test_market_calendar.py  test_mock_data.py  test_notify.py  test_order_placement.py  test_order_status.py  test_parquet_provider.py  test_parquet_provider_earnings.py  test_portfolio.py  test_position_monitor.py  test_position_sync.py  test_regime_engine.py  test_signal_mesh.py  test_signals_extended.py  test_simulated_executor.py  test_strategy_config.py  test_strategy_stats.py  test_tradier_client.py
(+16 files in other folders)
