[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-trader"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "anthropic>=0.30",
    "pytz>=2024.1",
]

[project.scripts]
portfoliod = "portfoliod.__main__:main"
trader = "portfolio_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["portfoliod", "portfolio_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
