[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kotori"
version = "0.1.0"
description = "Kotori (小鳥) — a portfolio companion for options traders running iron condors"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "anthropic>=0.30",
    "pytz>=2024.1",
    "python-dotenv>=1.0",
    "polars>=1.0",
    "scipy>=1.14",
    "plotext>=5.3.2",
    "plotly>=6.7.0",
    "exchange-calendars>=4.13.2",
    "yfinance>=1.4.0",
    "lxml>=6.1.1",
]

[project.scripts]
kotorid = "kotorid.__main__:main"
kotori = "kotori_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["kotorid", "kotori_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
